--- a/sfmlapp/sfmlapp.vcxproj
+++ b/sfmlapp/sfmlapp.vcxproj
@@ -141,6 +141,12 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Ellipse.h" />
+    <ClInclude Include="Functions.h" />
+    <ClInclude Include="Rectangle.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
