--- a/sfmlapp/sfmlapp.vcxproj
+++ b/sfmlapp/sfmlapp.vcxproj
@@ -139,15 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Container.cpp" />
+    <ClCompile Include="Composite.cpp" />
+    <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Circle.h" />
-    <ClInclude Include="Container.h" />
+    <ClInclude Include="Composite.h" />
     <ClInclude Include="Ellipse.h" />
     <ClInclude Include="Functions.h" />
     <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="Shape.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
