--- a/sfmlapp/sfmlapp.vcxproj
+++ b/sfmlapp/sfmlapp.vcxproj
@@ -141,18 +141,14 @@
   <ItemGroup>
     <ClInclude Include="Circle.h" />
     <ClInclude Include="Composite.h" />
-    <ClInclude Include="Drawable.hpp" />
+    <ClInclude Include="Drawable.h" />
     <ClInclude Include="Ellipse.h" />
-    <ClInclude Include="Functions.h" />
-    <ClInclude Include="Graphics.hpp" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="Rectangle.h" />
-    <ClInclude Include="Shape.hpp" />
-    <ClInclude Include="Transformable.hpp" />
+    <ClInclude Include="Shape.h" />
+    <ClInclude Include="Transformable.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Composite.cpp" />
-    <ClCompile Include="Line.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Transformable.cpp" />
